<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Pedro A. Guirado Ranea</b></string>
    <string name="accept">Aceptar</string>
    <string name="bienvenida">BIENVENIDO</string>
    <string name="texto_bienvenida">Preparate para descubir un mundo mágico a traves de esta app inspirada en</string>
    <string name="comenzar">Comenzar</string>
    <string name="txtlogo">logo</string>
    <string name="txt_personajes">¡Mira aquí los Personajes del mundo de Spyro!</string>
    <string name="txt_siguiente">Siguiente</string>
    <string name="txt_mundos">Aquí podrás explorar a todos los mundos que podras encontrar en Spyro.</string>
    <string name="txt_coleccionables">Aquí podrás descubrir todos los objetos coleccionables del mundo de Spyro.</string>
    <string name="txt_tituloBienvenida">Bienvenido al mundo de Spyro</string>
    <string name="terminar_guia">TERMINAR GUIA</string>
    <string name="btncomenzar">Comenzar</string>
    <string name="info">El boton INFO muestra quien es el creador de esta guia.</string>
    <string name="strinfo">El botón INFO muestra quién es el creador de esta guía.</string>
    <string name="comenzar_aventura">¡COMENZAR AVENTURA!</string>
    <string name="lista">Ya conoces:\n✅ Personajes\n✅ Mundos\n✅ Coleccionables\n✅ Soporte</string>
    <string name="gu_a_completada">¡Guía Completada!</string>
</resources>