<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="#7ADECC27"
    android:clickable="true"
    android:focusable="true">

        <!-- CONTENEDOR QUE VAMOS A ANIMAR -->
        <!-- Círculo de enfoque para Personajes -->

        <Button
            android:id="@+id/btnFinGuia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="150dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="40dp"
            android:text="@string/terminar_guia"
            app:layout_constraintBottom_toTopOf="@+id/tvGuide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling" />

        <View
            android:id="@+id/focus_circle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/shape_circle_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            android:layout_marginBottom="5dp" />


        <LinearLayout
            android:layout_width="362dp"
            android:layout_height="105dp"
            android:id="@+id/bocadillo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:background="@drawable/bubble"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/focus_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNext">

                <TextView
                    android:id="@+id/tvGuide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_personajes"
                    android:textColor="@color/gold"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/focus_circle"
                    app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="150dp"
            android:layout_marginTop="493dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="43dp"
            android:text="@string/txt_siguiente"
            app:layout_constraintBottom_toTopOf="@+id/bocadillo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling" />

</androidx.constraintlayout.widget.ConstraintLayout>